# PDF-Perm

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: integration_test.rs
