[package]
name = "pdf-perm"
version = "0.1.2"
edition = "2024"
readme = "README.md"
description = "Change the permissions of a PDF file."
keywords = ["cli", "pdf", "permissions", "metadata", "file"]
categories = ["command-line-utilities", "encoding", "security"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/PDF-Perm"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
anyhow = { version = "1.0.97", optional = true }
bitflags = "2.9.0"
env_logger = { version = "0.11.8", optional = true }
log = "0.4.27"
lopdf = "0.36.0"

[[bin]]
name = "pdf-perm"
required-features = ["cli"]

[features]
cli = ["anyhow", "env_logger"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
